dist_pkgdata_DATA = cckddasd.html fishgui.html hercconf.html hercfaq.html     \
        hercinst.html herclic.html hercload.html hercmsca.html hercmscf.html  \
        hercmscp.html hercmsct.html hercmsda.html hercmsdc.html hercmsdg.html \
        hercmsdi.html hercmsdl.html hercmsds.html hercmsdt.html hercmsdu.html \
        hercmsg.html hercmshd.html hercmshe.html hercmshg.html hercmshm.html  \
        hercmsht.html hercmshu.html hercmsif.html hercmsin.html hercmslc.html \
        hercmslg.html hercmspn.html hercmspr.html hercmspu.html hercmsrd.html \
        hercmssd.html hercmsta.html hercmstc.html hercmste.html hercmstm.html \
        hercmsts.html hercmstt.html hercmstu.html hercmsvm.html hercnew.html  \
        hercrdr.html hercrnot.html hercsupp.html herctcp.html hercules.html   \
        index.html tasks.html

include_sources = include/header.htmlpart include/footer.htmlpart

include_pkgdatadir = $(pkgdatadir)/include

dist_include_pkgdata_DATA = $(include_sources)

images_sources = images/hercules.jpg \
        images/dial1.gif       images/loadu.gif       images/startd.gif  \
        images/dial2.gif       images/manonu.gif      images/startu.gif  \
        images/dial3.gif       images/poweroffd.gif   images/stopd.gif   \
        images/dial4.gif       images/poweroffu.gif   images/stopu.gif   \
        images/interruptd.gif  images/poweronond.gif  images/stored.gif  \
        images/interruptu.gif  images/powerononu.gif  images/storeu.gif  \
        images/loadd.gif       images/restartd.gif    images/sysonu.gif  \
        images/loadonu.gif     images/restartu.gif    images/waitonu.gif \
        images/osi-certified-60x50.jpg images/note.gif images/back.gif

images_pkgdatadir = $(pkgdatadir)/images

dist_images_pkgdata_DATA = $(images_sources)
