dist_pkgdata_DATA =   cckddasd.html fishgui.html  hercconf.html hercfaq.html  \
        hercinst.html herclic.html  hercload.html hercmsca.html hercmscf.html \
        hercmscp.html hercmsct.html hercmscu.html hercmsda.html hercmsdc.html \
        hercmsdg.html hercmsdi.html hercmsdl.html hercmsds.html hercmsdt.html \
        hercmsdu.html hercmsg.html  hercmshd.html hercmshe.html hercmshg.html \
        hercmshm.html hercmsht.html hercmshu.html hercmsif.html hercmsin.html \
        hercmslc.html hercmslg.html hercmspn.html hercmspr.html hercmspu.html \
        hercmsrd.html hercmssd.html hercmsta.html hercmstc.html hercmste.html \
        hercmstm.html hercmsts.html hercmstt.html hercmstu.html hercmsvm.html \
        hercnew.html  hercrdr.html  hercrnot.html hercsupp.html herctcp.html  \
        hercules.html index.html    shared.html   tasks.html    hercules.css  \
        telnet.html

include_sources = include/header.htmlpart include/footer.htmlpart

include_pkgdatadir = $(pkgdatadir)/include

dist_include_pkgdata_DATA = $(include_sources)

images_sources = images/loadoffu.gif images/restartu.gif \
        images/back.gif images/loadonu.gif images/startd.gif \
        images/bkued.gif images/loadu.gif images/startu.gif \
        images/blueu.gif images/manoffu.gif images/stopd.gif  \
        images/dial1.gif images/manonu.gif images/stopu.gif  \
        images/dial2.gif images/note.gif images/stored.gif \
        images/dial3.gif images/osi-certified-60x50.jpg images/storeu.gif \
        images/dial4.gif images/poweroffd.gif images/sysoffu.gif \
        images/favicon.ico images/poweroffu.gif images/sysonu.gif \
        images/greend.gif images/poweronoffd.gif images/translucentoffd.gif \
        images/greenu.gif images/poweronoffu.gif images/translucentoffu.gif \
        images/hercpic-rblk-256.gif images/poweronond.gif images/translucentond.gif \
        images/hercpic-rblk-80.gif images/powerononu.gif images/translucentonu.gif \
        images/interruptd.gif images/redd.gif images/waitoffu.gif \
        images/interruptu.gif images/redu.gif images/waitonu.gif \
        images/loadd.gif images/restartd.gif \
        images/telnetputtyconndata.png  \
        images/telnetputtysession.png   \
        images/telnetputtyterminal.png  \
        images/telnetwin10.png          \
        images/telnetwinntconnect.png   \
        images/telnetwinnttermpref.png

images_pkgdatadir = $(pkgdatadir)/images

dist_images_pkgdata_DATA = $(images_sources)
