
dist_pkgdata_DATA =   \
    cckddasd.html     \
    fishgui.html      \
    hercconf.html     \
    hercfaq.html      \
    hercinst.html     \
    herclic.html      \
    hercload.html     \
    hercmsca.html     \
    hercmscf.html     \
    hercmscp.html     \
    hercmsct.html     \
    hercmscu.html     \
    hercmsda.html     \
    hercmsdc.html     \
    hercmsdg.html     \
    hercmsdi.html     \
    hercmsdl.html     \
    hercmsdn.html     \
    hercmsds.html     \
    hercmsdt.html     \
    hercmsdu.html     \
    hercmsg.html      \
    hercmshd.html     \
    hercmshe.html     \
    hercmshg.html     \
    hercmshm.html     \
    hercmsht.html     \
    hercmshu.html     \
    hercmsif.html     \
    hercmsin.html     \
    hercmslc.html     \
    hercmslg.html     \
    hercmspn.html     \
    hercmspr.html     \
    hercmspu.html     \
    hercmsrd.html     \
    hercmssd.html     \
    hercmsta.html     \
    hercmstc.html     \
    hercmste.html     \
    hercmstm.html     \
    hercmsts.html     \
    hercmstt.html     \
    hercmstu.html     \
    hercmsvm.html     \
    hercnew.html      \
    hercrdr.html      \
    hercrnot.html     \
    hercsupp.html     \
    herctcp.html      \
    hercules.css      \
    hercules.html     \
    index.html        \
    Makefile.am       \
    shared.html       \
    tasks.html        \
    telnet.html

include_sources =           \
    include/footer.htmlpart \
    include/header.htmlpart

include_pkgdatadir = $(pkgdatadir)/include

dist_include_pkgdata_DATA = $(include_sources)

images_sources =                        \
    images/back.gif                     \
    images/bkued.gif                    \
    images/blueu.gif                    \
    images/dial1.gif                    \
    images/dial2.gif                    \
    images/dial3.gif                    \
    images/dial4.gif                    \
    images/favicon.ico                  \
    images/greend.gif                   \
    images/greenu.gif                   \
    images/hercpic-rblk-256.gif         \
    images/hercpic-rblk-80.gif          \
    images/interruptd.gif               \
    images/interruptu.gif               \
    images/loadd.gif                    \
    images/loadoffu.gif                 \
    images/loadonu.gif                  \
    images/loadu.gif                    \
    images/manoffu.gif                  \
    images/manonu.gif                   \
    images/note.gif                     \
    images/osi-certified-60x50.jpg      \
    images/poweroffd.gif                \
    images/poweroffu.gif                \
    images/poweronoffd.gif              \
    images/poweronoffu.gif              \
    images/poweronond.gif               \
    images/powerononu.gif               \
    images/redd.gif                     \
    images/redu.gif                     \
    images/restartd.gif                 \
    images/restartu.gif                 \
    images/startd.gif                   \
    images/startu.gif                   \
    images/stopd.gif                    \
    images/stopu.gif                    \
    images/stored.gif                   \
    images/storeu.gif                   \
    images/sysoffu.gif                  \
    images/sysonu.gif                   \
    images/telnetputtyconndata.png      \
    images/telnetputtysession.png       \
    images/telnetputtyterminal.png      \
    images/telnetwin.png                \
    images/telnetwinntconnect.png       \
    images/telnetwinnttermpref.png      \
    images/translucentoffd.gif          \
    images/translucentoffu.gif          \
    images/translucentond.gif           \
    images/translucentonu.gif           \
    images/waitoffu.gif                 \
    images/waitonu.gif

images_pkgdatadir = $(pkgdatadir)/images

dist_images_pkgdata_DATA = $(images_sources)

