dist_pkgdata_DATA = \
    a.core          \
    b.core          \
    bctr.core       \
    cpu0off.core    \
    l.core          \
    la.core         \
    la2.core        \
    mvc.core        \
    sieve.core      \
    st.core

EXTRA_DIST =        \
    agf.txt         \
    alsi.txt        \
    axtr.txt        \
    brc.txt         \
    cdfr.txt        \
    cdgr.txt        \
    cdsg.txt        \
    cgdr.txt        \
    cgdtr.txt       \
    cger.txt        \
    cgxr.txt        \
    cgfrl.txt       \
    cgxtr.txt       \
    cpsdr.txt       \
    csst.txt        \
    cxgbr.txt       \
    cxgtr.txt       \
    diag24.txt      \
    dxtr.txt        \
    epsw.txt        \
    exrl.txt        \
    fiebr.txt       \
    fixtr.txt       \
    iedtr.txt       \
    kimd0.txt       \
    kimd1.txt       \
    kimd2.txt       \
    kimd3.txt       \
    klmd0.txt       \
    klmd1.txt       \
    klmd2.txt       \
    klmd3.txt       \
    km0.txt         \
    km1.txt         \
    km18.txt        \
    km19.txt        \
    km2.txt         \
    km20.txt        \
    km3.txt         \
    kmac0.txt       \
    kmac1.txt       \
    kmac2.txt       \
    kmac3.txt       \
    kmc0.txt        \
    kmc1.txt        \
    kmc18.txt       \
    kmc19.txt       \
    kmc2.txt        \
    kmc20.txt       \
    kmc3.txt        \
    kmc67.txt       \
    ldetr.txt       \
    ldxtr.txt       \
    ledtr.txt       \
    lfpc.txt        \
    llhrl.txt       \
    loop.txt        \
    lxdtr.txt       \
    maer.txt        \
    mvcos.txt       \
    mxtr.txt        \
    popcnt.txt      \
    prtest.txt      \
    ptf.txt         \
    rnsbg.txt       \
    rrdtr.txt       \
    rrxtr.txt       \
    srdt.txt        \
    tapepos.txt     \
    tbedr.txt       \
    tdcdt.txt       \
    tdgdt.txt       \
    thder.txt       \
    trte.txt
