dist_pkgdata_DATA =			\
	 a.core					\
	 b.core					\
	 bctr.core				\
	 cpu0off.core			\
	 ieee-adds.core			\
	 ieee-comps.core		\
	 ieee-div-nans.core		\
	 ieee-divs.core			\
	 ieee-mults.core		\
	 ieee-sqrts.core		\
	 ieee-subs.core			\
	 l.core					\
	 la.core				\
	 la2.core				\
	 mvc.core				\
	 sieve.core				\
	 st.core

EXTRA_DIST =				\
	 agf.assemble			\
	 agf.listing			\
	 agf.tst				\
	 agf.txt				\
	 alsi.txt				\
	 asmtst.xedit			\
	 awsbsf.aws				\
	 awsbsf.tst				\
	 axtr.txt				\
	 bldhtc.exec			\
	 bldhtc.rexx			\
	 brc.txt				\
	 cdfr.txt				\
	 cdgr.txt				\
	 cdsg.txt				\
	 cgdr.txt				\
	 cgdtr.txt				\
	 cger.txt				\
	 cgfrl.txt				\
	 cgxr.txt				\
	 cgxtr.txt				\
	 channel-370.txt		\
	 cipher.assemble		\
	 cipher.listing			\
	 cipher.tst				\
	 cmd-abs-2K.subtst		\
	 cmd-abs-4K.subtst		\
	 cmd-abs.subtst			\
	 cmd-rv-2K.subtst		\
	 cmd-rv-4K-32.subtst	\
	 cmd-rv-4K-64.subtst	\
	 cmd-rv.subtst			\
	 comments.txt			\
	 cpsdr.txt				\
	 csst.txt				\
	 cvttst.rexx			\
	 csxtr.assemble			\
	 csxtr.listing			\
	 csxtr.tst				\
	 cxgbr.txt				\
	 cxgtr.txt				\
	 dc-float.asm			\
	 diag24.txt				\
	 diag8.txt				\
	 digest.assemble		\
	 digest.listing			\
	 digest.tst				\
	 dotest					\
	 dxtr.txt				\
	 epsw.txt				\
	 exrl.txt				\
	 fiebr.txt				\
	 fixtr.txt				\
	 hetbsf.het				\
	 hetbsf.tst				\
	 iedtr.txt				\
	 ieee-adds.asm			\
	 ieee-adds.list			\
	 ieee-adds.tst			\
	 ieee-comps.asm			\
	 ieee-comps.list		\
	 ieee-comps.tst			\
	 ieee-div-nans.asm		\
	 ieee-div-nans.list		\
	 ieee-div-nans.tst		\
	 ieee-divs.asm			\
	 ieee-divs.list			\
	 ieee-divs.tst			\
	 ieee-mults.asm			\
	 ieee-mults.list		\
	 ieee-mults.tst			\
	 ieee-sqrts.asm			\
	 ieee-sqrts.list		\
	 ieee-sqrts.tst			\
	 ieee-subs.asm			\
	 ieee-subs.list			\
	 ieee-subs.tst			\
	 ilc.assemble			\
	 ilc.listing			\
	 ilc.tst				\
	 invpsw.assemble		\
	 invpsw.listing			\
	 invpsw.tst				\
	 kimd0.txt				\
	 kimd1.txt				\
	 kimd2.txt				\
	 kimd3.txt				\
	 kimd65.txt				\
	 klmd0.txt				\
	 klmd1.txt				\
	 klmd2.txt				\
	 klmd3.txt				\
	 km0.txt				\
	 km1.txt				\
	 km10.txt				\
	 km11.txt				\
	 km18.txt				\
	 km19.txt				\
	 km2.txt				\
	 km20.txt				\
	 km26.txt				\
	 km27.txt				\
	 km28.txt				\
	 km3.txt				\
	 km50.txt				\
	 km52.txt				\
	 km58.txt				\
	 km60.txt				\
	 km9.txt				\
	 kmac0.txt				\
	 kmac1.txt				\
	 kmac10.txt				\
	 kmac11.txt				\
	 kmac18.txt				\
	 kmac19.txt				\
	 kmac2.txt				\
	 kmac20.txt				\
	 kmac26.txt				\
	 kmac27.txt				\
	 kmac28.txt				\
	 kmac3.txt				\
	 kmac9.txt				\
	 kmc0.txt				\
	 kmc1.txt				\
	 kmc10.txt				\
	 kmc11.txt				\
	 kmc18.txt				\
	 kmc19.txt				\
	 kmc2.txt				\
	 kmc20.txt				\
	 kmc26.txt				\
	 kmc27.txt				\
	 kmc28.txt				\
	 kmc3.txt				\
	 kmc67.txt				\
	 kmc9.txt				\
	 kmctr0.txt				\
	 kmctr1.txt				\
	 kmctr10.txt			\
	 kmctr11.txt			\
	 kmctr18.txt			\
	 kmctr19.txt			\
	 kmctr2.txt				\
	 kmctr20.txt			\
	 kmctr26.txt			\
	 kmctr27.txt			\
	 kmctr28.txt			\
	 kmctr3.txt				\
	 kmctr9.txt				\
	 kmf0.txt				\
	 kmf1.txt				\
	 kmf10.txt				\
	 kmf11.txt				\
	 kmf18.txt				\
	 kmf19.txt				\
	 kmf2.txt				\
	 kmf20.txt				\
	 kmf26.txt				\
	 kmf27.txt				\
	 kmf28.txt				\
	 kmf3.txt				\
	 kmf9.txt				\
	 kmo0.txt				\
	 kmo1.txt				\
	 kmo10.txt				\
	 kmo11.txt				\
	 kmo18.txt				\
	 kmo19.txt				\
	 kmo2.txt				\
	 kmo20.txt				\
	 kmo26.txt				\
	 kmo27.txt				\
	 kmo28.txt				\
	 kmo3.txt				\
	 kmo9.txt				\
	 ldetr.txt				\
	 ldxtr.txt				\
	 leapfrog.assemble		\
	 leapfrog.listing		\
	 leapfrog.tst			\
	 ledtr.txt				\
	 lfpc.txt				\
	 llhrl.txt				\
	 locgr.txt				\
	 logicimm.assemble		\
	 logicimm.listing		\
	 logicimm.tst			\
	 loop.txt				\
	 lparnum.txt			\
	 lpp.txt				\
	 lxdtr.txt				\
	 maer.txt				\
	 mainsize.tst			\
	 Makefile.am			\
	 mhi.assemble			\
	 mhi.listing			\
	 mhi.tst				\
	 mkcore.rexx			\
	 mvcle.assemble			\
	 mvcle.listing			\
	 mvcle.tst				\
	 mvcos.txt				\
	 mxtr.txt				\
	 pfpo-esa.assemble		\
	 pfpo-esa.listing		\
	 pfpo-esa.tst			\
	 popcnt.txt				\
	 pr.tst					\
	 pr.subtst				\
	 printer.txt			\
	 ptf.txt				\
	 README					\
	 redtest.rexx			\
	 res40002.txt			\
	 rnsbg.txt				\
	 rrdtr.txt				\
	 rrxtr.txt				\
	 runtest				\
	 runtest.cmd			\
	 runtest.subtst			\
	 runtest0.tst			\
	 runtest4.tst			\
	 sigp.assemble			\
	 sigp.listing			\
	 sigp.tst				\
	 srdt.txt				\
	 ssk370.tst				\
	 sske.assemble			\
	 sske.listing			\
	 sske.tst				\
	 sske370.tst			\
	 sske390.tst			\
	 stfl.assemble			\
	 stfl.core				\
	 stfl.listing			\
	 stfl.tst				\
	 stfle.txt				\
	 stidp.txt				\
	 stsi.txt				\
	 sus40002.txt			\
	 tape.240k-2.txt		\
	 tape.240k.txt			\
	 tape.2m.txt			\
	 tape.32k.txt			\
	 tapebsf.subtst			\
	 tapepos.txt			\
	 tbedr.txt				\
	 tdcdt.txt				\
	 tdgdt.txt				\
	 tests.conf				\
	 thder.txt				\
	 timeout.tst			\
	 trace.txt				\
	 trte.txt				\
	privop.asm\
	privop.core\
	privop.list\
	privop.tst\
	problem.asm\
	problem.core\
	problem.list\
	problem.tst\
	semipriv.asm\
	semipriv.core\
	semipriv.list\
	semipriv.tst\
	txt2tst.rexx\
	wild.assemble\
	wild.listing\
	wild.tst\
