
EXTRA_DIST =				\
	 agf.assemble			\
	 agf.listing			\
	 agf.tst				\
	 agf.txt				\
	 alsi.txt				\
	 asmtst.xedit			\
	 awsbsf.aws				\
	 awsbsf.tst				\
	 axtr.txt				\
	 bldhtc.exec			\
	 bldhtc.rexx			\
     bfp-001-divtoint.asm	\
     bfp-001-divtoint.core	\
     bfp-001-divtoint.list	\
     bfp-001-divtoint.tst	\
     bfp-002-loadr.asm  	\
     bfp-002-loadr.core	    \
     bfp-002-loadr.list	    \
     bfp-002-loadr.tst	    \
     bfp-003-loadfpi.asm	\
     bfp-003-loadfpi.core	\
     bfp-003-loadfpi.list	\
     bfp-003-loadfpi.tst	\
     bfp-004-cvttolog.asm	\
     bfp-004-cvttolog.core	\
     bfp-004-cvttolog.list	\
     bfp-004-cvttolog.tst	\
     bfp-005-cvttolog64.asm	\
     bfp-005-cvttolog64.core	\
     bfp-005-cvttolog64.list	\
     bfp-005-cvttolog64.tst	\
     bfp-006-cvttofix.asm	\
     bfp-006-cvttofix.core	\
     bfp-006-cvttofix.list	\
     bfp-006-cvttofix.tst	\
     bfp-007-cvttofix64.asm	\
     bfp-007-cvttofix64.core	\
     bfp-007-cvttofix64.list	\
     bfp-007-cvttofix64.tst	\
     bfp-008-cvtfrlog.asm	\
     bfp-008-cvtfrlog.core	\
     bfp-008-cvtfrlog.list	\
     bfp-008-cvtfrlog.tst	\
     bfp-009-cvtfrlog64.asm	\
     bfp-009-cvtfrlog64.core	\
     bfp-009-cvtfrlog64.list	\
     bfp-009-cvtfrlog64.tst	\
     bfp-010-cvtfrfix.asm	\
     bfp-010-cvtfrfix.core	\
     bfp-010-cvtfrfix.list	\
     bfp-010-cvtfrfix.tst	\
     bfp-011-cvtfrfix64.asm	\
     bfp-011-cvtfrfix64.core	\
     bfp-011-cvtfrfix64.list	\
     bfp-011-cvtfrfix64.tst	\
     bfp-012-loadtest.asm	\
     bfp-012-loadtest.core	\
     bfp-012-loadtest.list	\
     bfp-012-loadtest.tst	\
     bfp-013-comps.asm  	\
     bfp-013-comps.core	    \
     bfp-013-comps.list	    \
     bfp-013-comps.tst	    \
     bfp-014-divide.asm	    \
     bfp-014-divide.core	\
     bfp-014-divide.list	\
     bfp-014-divide.tst	    \
     bfp-015-sqrt.asm	    \
     bfp-015-sqrt.core	    \
     bfp-015-sqrt.list	    \
     bfp-015-sqrt.tst	    \
     bfp-016-add.asm	    \
     bfp-016-add.core	    \
     bfp-016-add.list	    \
     bfp-016-add.tst	    \
     bfp-017-loadl.asm	    \
     bfp-017-loadl.core	    \
     bfp-017-loadl.list	    \
     bfp-017-loadl.tst	    \
     bfp-018-subtract.asm	\
     bfp-018-subtract.core	\
     bfp-018-subtract.list	\
     bfp-018-subtract.tst	\
     bfp-019-multiply.asm	\
     bfp-019-multiply.core	\
     bfp-019-multiply.list	\
     bfp-019-multiply.tst	\
     bfp-020-multlonger.asm	\
     bfp-020-multlonger.core	\
     bfp-020-multlonger.list	\
     bfp-020-multlonger.tst	\
     bfp-021-multadd.asm	\
     bfp-021-multadd.core	\
     bfp-021-multadd.list	\
     bfp-021-multadd.tst	\
     bfp-022-multsub.asm	\
     bfp-022-multsub.core	\
     bfp-022-multsub.list	\
     bfp-022-multsub.tst	\
     bfp-023-threads.asm	\
     bfp-023-threads.core	\
     bfp-023-threads.list	\
     bfp-023-threads.sptst	\
	 brc.txt				\
	 cdfr.txt				\
	 cdgr.txt				\
	 cdsg.txt				\
	 cgdr.txt				\
	 cgdtr.txt				\
	 cger.txt				\
	 cgfrl.txt				\
	 cgxr.txt				\
	 cgxtr.txt				\
	 channel-370.txt		\
	 cipher.assemble		\
	 cipher.listing			\
	 cipher.tst				\
	 cmd-abs-2K.subtst		\
	 cmd-abs-4K.subtst		\
	 cmd-abs.subtst			\
	 cmd-rv-2K.subtst		\
	 cmd-rv-4K-32.subtst	\
	 cmd-rv-4K-64.subtst	\
	 cmd-rv.subtst			\
	 comments.txt			\
	 cpsdr.txt				\
	 cpu0off.core			\
	 csst.txt				\
	 cvttst.rexx			\
	 csxtr.assemble			\
	 csxtr.listing			\
	 csxtr.tst				\
	 cxgbr.txt				\
	 cxgtr.txt				\
	 dc-float.asm			\
	 diag24.txt				\
	 diag8.txt				\
	 digest.assemble		\
	 digest.listing			\
	 digest.tst				\
	 dotest					\
	 dxtr.txt				\
	 epsw.txt				\
	 exrl.txt				\
	 fiebr.txt				\
	 fixtr.txt				\
	 hetbsf.het				\
	 hetbsf.tst				\
	 iedtr.txt				\
	 ilc.assemble			\
	 ilc.listing			\
	 ilc.tst				\
	 invpsw.assemble		\
	 invpsw.listing			\
	 invpsw.tst				\
	 kimd0.txt				\
	 kimd1.txt				\
	 kimd2.txt				\
	 kimd3.txt				\
	 kimd65.txt				\
	 klmd0.txt				\
	 klmd1.txt				\
	 klmd2.txt				\
	 klmd3.txt				\
	 km0.txt				\
	 km1.txt				\
	 km10.txt				\
	 km11.txt				\
	 km18.txt				\
	 km19.txt				\
	 km2.txt				\
	 km20.txt				\
	 km26.txt				\
	 km27.txt				\
	 km28.txt				\
	 km3.txt				\
	 km50.txt				\
	 km52.txt				\
	 km58.txt				\
	 km60.txt				\
	 km9.txt				\
	 kmac0.txt				\
	 kmac1.txt				\
	 kmac10.txt				\
	 kmac11.txt				\
	 kmac18.txt				\
	 kmac19.txt				\
	 kmac2.txt				\
	 kmac20.txt				\
	 kmac26.txt				\
	 kmac27.txt				\
	 kmac28.txt				\
	 kmac3.txt				\
	 kmac9.txt				\
	 kmc0.txt				\
	 kmc1.txt				\
	 kmc10.txt				\
	 kmc11.txt				\
	 kmc18.txt				\
	 kmc19.txt				\
	 kmc2.txt				\
	 kmc20.txt				\
	 kmc26.txt				\
	 kmc27.txt				\
	 kmc28.txt				\
	 kmc3.txt				\
	 kmc67.txt				\
	 kmc9.txt				\
	 kmctr0.txt				\
	 kmctr1.txt				\
	 kmctr10.txt			\
	 kmctr11.txt			\
	 kmctr18.txt			\
	 kmctr19.txt			\
	 kmctr2.txt				\
	 kmctr20.txt			\
	 kmctr26.txt			\
	 kmctr27.txt			\
	 kmctr28.txt			\
	 kmctr3.txt				\
	 kmctr9.txt				\
	 kmf0.txt				\
	 kmf1.txt				\
	 kmf10.txt				\
	 kmf11.txt				\
	 kmf18.txt				\
	 kmf19.txt				\
	 kmf2.txt				\
	 kmf20.txt				\
	 kmf26.txt				\
	 kmf27.txt				\
	 kmf28.txt				\
	 kmf3.txt				\
	 kmf9.txt				\
	 kmo0.txt				\
	 kmo1.txt				\
	 kmo10.txt				\
	 kmo11.txt				\
	 kmo18.txt				\
	 kmo19.txt				\
	 kmo2.txt				\
	 kmo20.txt				\
	 kmo26.txt				\
	 kmo27.txt				\
	 kmo28.txt				\
	 kmo3.txt				\
	 kmo9.txt				\
	 ldetr.txt				\
	 ldxtr.txt				\
	 leapfrog.assemble		\
	 leapfrog.listing		\
	 leapfrog.tst			\
	 ledtr.txt				\
	 lfpc.txt				\
	 llhrl.txt				\
	 locgr.txt				\
	 logicimm.assemble		\
	 logicimm.listing		\
	 logicimm.tst			\
	 loop.txt				\
	 lparnum.txt			\
	 lpp.txt				\
	 lxdtr.txt				\
	 maer.txt				\
	 mainsize.tst			\
	 Makefile.am			\
	 mhi.assemble			\
	 mhi.listing			\
	 mhi.tst				\
	 mkcore.rexx			\
	 mvcle.assemble			\
	 mvcle.listing			\
	 mvcle.tst				\
	 mvcos.txt				\
	 mxtr.txt				\
	 pfpo-esa.assemble		\
	 pfpo-esa.listing		\
	 pfpo-esa.tst			\
	 popcnt.txt				\
	 pr.tst					\
	 pr.subtst				\
	 printer.txt			\
	 ptf.txt				\
	 README					\
	 redtest.rexx			\
	 res40002.txt			\
	 rnsbg.txt				\
	 rrdtr.txt				\
	 rrxtr.txt				\
	 runtest				\
	 runtest.cmd			\
	 runtest.subtst			\
	 runtest0.tst			\
	 runtest4.tst			\
	 sieve.core				\
	 sigp.assemble			\
	 sigp.listing			\
	 sigp.tst				\
	 srdt.txt				\
	 ssk370.tst				\
	 sske.assemble			\
	 sske.listing			\
	 sske.tst				\
	 sske370.tst			\
	 sske390.tst			\
	 stfl.assemble			\
	 stfl.core				\
	 stfl.listing			\
	 stfl.tst				\
	 stfle.txt				\
	 stidp.txt				\
	 stsi.txt				\
	 sus40002.txt			\
	 tape.240k-2.txt		\
	 tape.240k.txt			\
	 tape.2m.txt			\
	 tape.32k.txt			\
	 tapebsf.subtst			\
	 tapepos.txt			\
	 tbedr.txt				\
	 tdcdt.txt				\
	 tdgdt.txt				\
	 tests.conf				\
	 thder.txt				\
	 timeout.tst			\
	 trace.txt				\
	 trte.txt				\
	privop.asm\
	privop.core\
	privop.list\
	privop.tst\
	problem.asm\
	problem.core\
	problem.list\
	problem.tst\
	semipriv.asm\
	semipriv.core\
	semipriv.list\
	semipriv.tst\
	txt2tst.rexx\
	wild.assemble\
	wild.listing\
	wild.tst\
	makefile

# The following rule requires the environment APATH to be set to the
# location of SATK before making, for example:
# export APATH=/usr/data/src/SATK/tools

# You can clone SATK from
# git@github.com:s390guy/SATK.git

SUFFIXES = .core .asm

.asm.core:
	ASMPATH=. MACLIB=mac ${APATH}/asma.py -l $*.list -i $@ $<
