
bin_SCRIPTS =       \
    bldlvlck        \
    dasdlist        \
    voldsext.cmd


dist_pkgdata_DATA = \
    awssl-v19g      \
    awswrite.jcl    \
    cckddump.hla    \
    cckdload.hla    \
    rawstape.jcl    \
    scsiboot        \
    tapeconv.jcl    \
    TMOUNT.txt      \
    zzsacard.bin


EXTRA_DIST =        \
    configure.ac    \
    dasdlist.bat    \
    Makefile.am

